Colaboratory を使用して作成しました

--- a/yuka_python_start.ipynb
+++ b/yuka_python_start.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjH4wDYiD74ioKuKk1EisY",
+      "authorship_tag": "ABX9TyN6PoOZeG6Qw4+rOw0qSAPg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,9 @@
         "exerciseはやったあと動作を確認して、たかゆきに説明したら次に進みましょう。\n",
         "言語化できることが大事です。面倒だとは思うのだけど、それぞれの変数の意味をきちんと理解して、それをきちんと使うことがプログラミング上達の近道になります。\n",
         "私が理解しきれていないところがあるので、一緒に勉強する意味でも時間はかかるけど、慣れるまで(自分で調べて進められるまで)はこの方法でやった方が良いと思います。\n",
+        "\n",
+        "またファイルはgoogle driveにレクチャーごとに自分で書いて保存しておいてください。githubにアカウントを作って保存しておいてもらった方が共有はしやすいので、面倒でなければ、そちらでお願いします。\n",
+        "https://github.com/\n",
         "\n",
         "#以下は実行例になります。"
       ]
@@ -159,17 +162,17 @@
       "metadata": {
         "id": "nB8pLR3MyCWo",
         "colab_type": "code",
+        "outputId": "f65d868e-2c10-4fc6-a91f-d46b28651e13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f65d868e-2c10-4fc6-a91f-d46b28651e13"
+        }
       },
       "source": [
         "a = 6       ## set a variable in this interpreter session\n",
         "a           ## entering an expression prints its value"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,17 +193,17 @@
       "metadata": {
         "id": "ct-Sr6eBybhE",
         "colab_type": "code",
+        "outputId": "140bda8d-48d0-4883-eec7-4f196ff59d50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "140bda8d-48d0-4883-eec7-4f196ff59d50"
+        }
       },
       "source": [
         "a = 'hi'    ## 'a' can hold a string just as well\n",
         "a\n"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,16 +224,16 @@
       "metadata": {
         "id": "X-_7D4fLygRM",
         "colab_type": "code",
+        "outputId": "6b207c73-597d-46ca-d7f4-151aae9d23f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6b207c73-597d-46ca-d7f4-151aae9d23f9"
+        }
       },
       "source": [
         "len(a)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,16 +254,16 @@
       "metadata": {
         "id": "jGKvy_inyt-c",
         "colab_type": "code",
+        "outputId": "2d5fe7f7-55f3-4bd0-9eb0-2f2320bc7a07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2d5fe7f7-55f3-4bd0-9eb0-2f2320bc7a07"
+        }
       },
       "source": [
         "a+str(len(a))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,11 +284,11 @@
       "metadata": {
         "id": "9AfxO8fwyzXD",
         "colab_type": "code",
+        "outputId": "81dd20ae-e3b0-4c56-e5e3-7435ad4a2902",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "81dd20ae-e3b0-4c56-e5e3-7435ad4a2902"
+        }
       },
       "source": [
         "import sys\n",
@@ -301,7 +304,7 @@
         "if __name__ == '__main__':\n",
         "    main()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,11 +320,11 @@
       "metadata": {
         "id": "N-YPnbzmy8Zb",
         "colab_type": "code",
+        "outputId": "7ac060db-24ef-4f6e-b9fd-f82a7ce30cbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7ac060db-24ef-4f6e-b9fd-f82a7ce30cbb"
+        }
       },
       "source": [
         "import re\n",
@@ -334,7 +337,7 @@
         "else:\n",
         "  print('did not find')"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
