Colaboratory を使用して作成しました

--- a/yuka_python_start.ipynb
+++ b/yuka_python_start.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6PoOZeG6Qw4+rOw0qSAPg",
+      "authorship_tag": "ABX9TyOHp6tTkZgi9FXsQJUFYbhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,14 +45,13 @@
         "Google colabというのがあるので、実行環境をPCに入れなくて済む、こちらでだいたい大丈夫ではないかと思います。\n",
         "#https://colab.research.google.com/\n",
         "\n",
-        "作ったファイルは自分のgoogle driveにおいておけばいつでも開けます。\n",
         "レクチャーと少し文法やインタフェースが違うところがあるので、その部分は調べながら、わからなければ聞きながら進めてみてください。\n",
         "\n",
         "exerciseはやったあと動作を確認して、たかゆきに説明したら次に進みましょう。\n",
         "言語化できることが大事です。面倒だとは思うのだけど、それぞれの変数の意味をきちんと理解して、それをきちんと使うことがプログラミング上達の近道になります。\n",
         "私が理解しきれていないところがあるので、一緒に勉強する意味でも時間はかかるけど、慣れるまで(自分で調べて進められるまで)はこの方法でやった方が良いと思います。\n",
         "\n",
-        "またファイルはgoogle driveにレクチャーごとに自分で書いて保存しておいてください。githubにアカウントを作って保存しておいてもらった方が共有はしやすいので、面倒でなければ、そちらでお願いします。\n",
+        "またファイルはgoogle driveにレクチャーごとに自分で書いて保存しておいてください。exerciseはgithubにアカウントを作って保存しておいてもらった方が共有はしやすいので、そちらでお願いします。\n",
         "https://github.com/\n",
         "\n",
         "#以下は実行例になります。"
